# grota

./: README.md  meson.build
rawrgb/src/: CMakeLists.txt  main.c
src/: CMakeLists.txt  camera.c  camera.h  main.c  require.h  shaders.c  window.c  window.h
src/core/: array.c  array.h  colors.c  colors.h  event_register.c  event_register.h  mathematics.c  mathematics.h  shaders.c  shaders.h  time.c  time.h
src/graphics/: camera.c  camera.h  graphics.c  graphics.h  renderer.c  renderer.h
src/libs/: opengl.h
src/libs/glad/include/glad/: glad.h
src/libs/glad/src/: glad.c
src/renderer/: camera.c  renderer.h  shaders.h  window.c
src/renderers/: quad.c  renderer.c  renderer.h  renderer_utils.c
